--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -2,25 +2,12 @@
   padding: 5px;
   border: 1px solid;
   width: 500px;
+  height: 60px;
 }
 .star {
   color: red;
 }
-.home {
-    color: red;
-}
-.features {
-    color: red;
-}
-.news {
-    color: red;
-}
-.myNotes {
-  color: red;
-}
-.newUser {
-  color: red;
-}
+
 p {
     color: green;
     margin-bottom: 2px;
