--- a/pages/my_notes.pug
+++ b/pages/my_notes.pug
@@ -1,7 +1,8 @@
+include header.pug
 include navigation.pug
 h1 Мои заметки
-- for (let i=0;i< length;i++)  
-  a(href="/my_notes/"+(i+1)) #{item[i].noteName}
+- for (let i=0;i<notes.length;i++)  
+  a(href="/my_notes/"+ notes[i].id) #{notes[i].noteName}
   br
 a(href="new_note") Создать новую заметку
 
