save changes in ex. Tables

--- a/pages/note.pug
+++ b/pages/note.pug
@@ -12,7 +12,7 @@ else
 div Теги:
 if (tags.length)
   -for (let i=0;i<tags.length;i++)
-    div #{tags[i].tagText}
+    div #{tags[i].tagText} - #{tags[i].user}
 else
   div пока тегов нет
 
