--- a/pages/navigation.pug
+++ b/pages/navigation.pug
@@ -2,6 +2,8 @@
   a(href="/" class=main) Главная /
   a(href="/features" class=features) Особенности /
   a(href="/news" class=news) Новости /
-  a(href="/my_notes" class=myNotes) Мои заметки /
+  a(href="/user/"+userId+"/notes" class=myNotes) Мои заметки /
   a(href="/new_user" class=newUser) Новый пользователь /
   a(href="/authentication" class=login) Вход
+  a(href="/" hidden) Выход
+br
