--- a/pages/new_user.pug
+++ b/pages/new_user.pug
@@ -23,5 +23,5 @@ form(action="", method="post")
   p Номер мобильного телефона
   input(type="text" size="40" name="mobileNumber" maxlength="12" placeholder="+79999999999")
   br
-  input(type="submit" value="Отправить данные" id="submit")
+  input(type="submit" value="Отправить данные")
   input(type="reset" value="Очистить")
